--- a/package.xml
+++ b/package.xml
@@ -13,10 +13,13 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  
   <depend>roscpp</depend>
   <depend>cmake_modules</depend>
   <depend>nodelet</depend>
-  <depend>mrs_msgs</depend>
+  <depend>mrs_modules_msgs</depend>
+  <depend>message_generation</depend>
+  <depend>message_runtime</depend>
 
   <export>
 
